# rnd.devtools.harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.sh
.quasipilot/: SYSTEM.md
agents/driver/: __init__.py  agent.py  prompt.py
cli/: __init__.py  __main__.py  run.py
cli/components/: __init__.py  bubbles.py  canceled.py  divider.py  input.py  runtime_bar.py  session_picker.py  spinner.py  streams.py  system.py
cli/slash_commands/: __init__.py  base.py  clear.py  compact.py  copy.py  exit.py  pop.py  python.py  registry.py  sessions.py
cli/utilities/: __init__.py  display.py  messages.py  sessions.py  streaming.py
core/: __init__.py  live_steering.py
core/compaction/: GUIDELINES.md  __init__.py  compactor.py  coordinator.py  llm.py  llms.py  logging.py  models.py  policy.py  prompts.py  quality.py  serialization.py  telemetry.py  token_counter.py  window.py
core/locks/: __init__.py  base.py  session.py
core/middleware/: __init__.py  _compat.py  cancellation.py  compaction.py  filesystem.py  live_steering.py  reasoning.py  runtime.py  session_dump.py  session_load.py  skills.py  system_prompt.py  telemetry.py  trajectory.py  trajectory_compaction.py
evals/: README.md  common.py  compaction_empirical.py  compaction_semantic_richness.py  compaction_semantic_richness_set.json  trajectory_empirical.py
tests/: test_cli_display.py  test_cli_sessions.py  test_cli_slash_commands.py  test_compaction.py  test_driver_agent.py  test_middleware.py  test_session_io.py  test_telemetry.py  test_trajectory_compaction.py  test_utilities_messages.py
(+47 files in other folders)
