[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "quasipilot-harness"
version = "0.1.0"
description = "Lightweight LangChain coding agent harness."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=1.0",
  "deepagents>=0.6",
  "langchain>=1.2,<2",
  "langchain-google-genai>=4.0",
  "langgraph>=1.1",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "textual>=6.0",
  "tiktoken>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
quasipilot = "cli.run:main"

[tool.hatch.build.targets.wheel]
packages = ["agents", "core", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

